--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
 title: Dangsdomainverification
 description: Now entering domain verification test page
